tile basically working

--- a/cross-hair.html
+++ b/cross-hair.html
@@ -6,7 +6,7 @@ Displays a cross-hair graphic rendered in svg. It has the following properties:
 	x,y,w,left,top
 -->
 
-<link rel="import" href="\bower_components/polymer/polymer.html">
+<link rel="import" href="bower_components/polymer/polymer.html">
 
 <dom-module id="cross-hair">
 
