setting for limit on spa rm

--- a/index_full.html
+++ b/index_full.html
@@ -89,9 +89,14 @@
 			<br><br>
 			Smoothing kernel boxcar <span id='rm_smoothing_val' class="slider_val">(2x?+1) by (2x?+1) bins</span><br>
 			<paper-slider class="nodrag" id="rm_smoothing_slider" pin snaps min="0" max="5" step="1" value="2" style='width:300px;'></paper-slider>
-
 			<br><br>
-			The peak rate is shown as "spa max" when you move your cursor over a group.
+			Ratemap frequency values are <span id='rm_max_hz_val' class="slider_val"></span><br>
+			<paper-slider class="nodrag" id="rm_max_hz_slider" pin snaps min="0" max="20" step="1" value="0" style='width:300px'></paper-slider>
+			
+			<br><br>
+			The true peak rate is shown as "spa max" when you move your cursor over a group.
+			<br><br>
+
 			<br>
 
 		</div>
