--- a/index_full.html
+++ b/index_full.html
@@ -6,6 +6,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
 <title>Cutting GUI</title>
 <link rel="stylesheet" type="text/css" href="main.css">
+<script> window.Polymer = {dom: 'shadow'}</script>
 <link rel="import" href="iron-splitter.html">
 <link rel="import" href="bower_components/paper-tooltip/paper-tooltip.html">
 <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
